# HTTPServer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chat.db  chat.db-shm  chat.db-wal  cmake_install.cmake  generate_certs.sh  main.cpp  server.crt  server.key
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: Chat.jsx  Login.jsx  Signup.jsx  UserProfile.jsx
include/: ChatRoom.hpp  Database.hpp  HttpSession.hpp  Listener.hpp  Logger.hpp  RateLimiter.hpp  WSSession.hpp  server_certificate.hpp
src/: ChatRoom.cpp  Database.cpp  HttpSession.cpp  Listener.cpp  RateLimiter.cpp  WSSession.cpp
